--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,3 +4,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+  @font-face {
+    font-family: 'Raleway';
+    src: url('{{ site.baseurl }}/assets/fonts/Raleway-Regular.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Yeseva One';
+    src: url('{{ site.baseurl }}/assets/fonts/YesevaOne-Regular.ttf') format('truetype');
+  }
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Yeseva One', sans-serif;
+}
+
+header {
+  background-color: #FAFFF9;
+}
