--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,3 +29,35 @@ h1, h2, h3, h4, h5, h6 {
 header {
   background-color: #FAFFF9;
 }
+
+.background-green {
+  background-color: #09402F;
+}
+
+.text-semi-white {
+  color: #FAFFF9;
+}
+
+.typewriter p {
+  color: #FAFFF9;
+  font-style: italic;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid white; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  animation:
+    typing 3s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: white }
+}
