--- a/_includes/header_section.html
+++ b/_includes/header_section.html
@@ -1,10 +1,17 @@
-<div class="background-green px-30 py-40 sm:py-40 lg:px-30">
-  <div class="mx-auto max-w-2xl text-center">
-    <h2 class="text-3xl font-bold tracking-tight text-semi-white sm:text-3xl">Vous n’êtes pas arrivé.e.s ici par pur hasard.</h2>
-    <p class="mt-2 text-sm leading-8 text-semi-white">Car vous avez une histoire à raconter. Et elle a le mérite d’être écoutée mais surtout d’être entendue.</p>
-    <p class="-mt-3 text-sm leading-8 text-semi-white">Vous êtes précisément au bon endroit</p>
-    <div class="mt-6 text-sm mx-auto max-w-min typewriter">
-      <p>L'art d'écrire, ensemble, votre histoire.</p>
+<div class="background-green">
+  <div class=" px-30 pb-40 pt-60 sm:pb-40 sm:pt-60 lg:px-30">
+    <div class="mx-auto max-w-2xl text-center">
+      <h2 class="text-3xl font-bold tracking-tight text-semi-white sm:text-3xl">Vous n’êtes pas arrivé.e.s ici par pur hasard.</h2>
+      <p class="mt-2 text-sm leading-8 text-semi-white">Car vous avez une histoire à raconter. Et elle a le mérite d’être écoutée mais surtout d’être entendue.</p>
+      <p class="-mt-3 text-sm leading-8 text-semi-white">Vous êtes précisément au bon endroit</p>
+      <div class="mt-6 text-sm mx-auto max-w-min typewriter">
+        <p>L'art d'écrire, ensemble, votre histoire.</p>
+      </div>
     </div>
+  </div>
+  <div class="pb-10">
+    <svg class="h-10 w-10 mx-auto text-semi-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path>
+    </svg>
   </div>
 </div>
