mission of edit agency section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 </head>
 
-<body class="text-red-500">
+<body>
   {% include header.html %}
   {% include header_section.html %}
+  {% include mission_section.html %}
   {{ content }}
 </body>
 
