--- a/_includes/header_section.html
+++ b/_includes/header_section.html
@@ -1,6 +1,6 @@
 <div class="background-green">
   <div class=" px-30 pb-40 pt-60 sm:pb-40 sm:pt-60 lg:px-30">
-    <div class="mx-auto max-w-2xl text-center">
+    <div class="mx-auto max-w-2xl text-center px-5 md:px-0">
       <h2 class="text-3xl font-bold tracking-tight text-semi-white sm:text-3xl">Vous n’êtes pas arrivé.e.s ici par pur hasard.</h2>
       <p class="mt-2 text-sm leading-8 text-semi-white">Car vous avez une histoire à raconter. Et elle a le mérite d’être écoutée mais surtout d’être entendue.</p>
       <p class="-mt-3 text-sm leading-8 text-semi-white">Vous êtes précisément au bon endroit</p>
