--- a/_includes/mission_section.html
+++ b/_includes/mission_section.html
@@ -1,9 +1,26 @@
 <div>
-  <div class="px-30 pb-40 pt-60 sm:pb-40 sm:pt-60 lg:px-30">
-    <div class="mx-auto max-w-2xl text-left">
+  <div class="px-30 pb-60 pt-60 lg:px-30 xl:p-90">
+    <div class="mx-auto max-w-2xl text-left px-5 md:px-0">
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
-      <p class="mt-4 text-sm">Chez <strong>edit. agency</strong> notre mission est claire : donner vie à vos idées, construire des ponts entre votre entreprise et votre public cible, tout en restant fidèle à nos valeurs fondamentales : l'environnement et la transparence.</p>
-      <p class="mt-2 text-sm">Nous nous engageons à élaborer des stratégies de communication novatrices, respectueuses de la planète et intégrant les dernières avancées technologiques pour propulser votre message vers de nouveaux sommets.</p>
+      <p class="mt-4 text-sm">Chez <b>edit. agency</b> notre mission est claire : donner vie à vos idées, construire des ponts entre votre entreprise et votre public cible, tout en restant fidèle à nos valeurs fondamentales : <b>l'environnement</b> et <b>la transparence</b>.</p>
+      <p class="mt-2 text-sm">Nous nous engageons à élaborer des <b>stratégies de communication novatrices</b>, respectueuses de la planète et intégrant les dernières avancées technologiques pour propulser votre message vers de nouveaux sommets.</p>
+      <dl class="mx-auto mt-10 grid max-w-2xl grid-cols-3 gap-y-10 sm:gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-5">
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
+          <dt class="text-xs font-semibold leading-4">Relations publiques</dt>
+        </div>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
+          <dt class="text-xs font-semibold leading-4">Social Media</dt>
+        </div>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
+          <dt class="text-xs font-semibold leading-4">Brand Content</dt>
+        </div>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
+          <dt class="text-xs font-semibold leading-4">Accompagnement de dirigeants</dt>
+        </div>
+        <div class="flex flex-col gap-y-3 border-l border-r border-grey/10 text-center">
+          <dt class="text-xs font-semibold leading-4">Prête-plume</dt>
+        </div>
+      </dl>
     </div>
   </div>
 </div>
