new section for valeurs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   {% include header.html %}
   {% include header_section.html %}
   {% include mission_section.html %}
+  {% include valeurs_section.html %}
   {{ content }}
 </body>
 
