--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
   {% include header_section.html %}
   {% include mission_section.html %}
   {% include valeurs_section.html %}
+  {% include founder_section.html %}
   {{ content }}
 </body>
 
