--- a/_includes/mission_section.html
+++ b/_includes/mission_section.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="px-30 pb-60 pt-60 lg:px-30 xl:p-90">
-    <div class="mx-auto max-w-2xl text-left px-5 md:px-0">
+  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
+    <div class="mx-auto max-w-2xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
       <p class="mt-6 text-sm">Chez <b>edit. agency</b> notre mission est claire : donner vie à vos idées, construire des ponts entre votre entreprise et votre public cible, tout en restant fidèle à nos valeurs fondamentales : <b>l'environnement</b> et <b>la transparence</b>.</p>
       <p class="mt-2 text-sm">Nous nous engageons à élaborer des <b>stratégies de communication novatrices</b>, respectueuses de la planète et intégrant les dernières avancées technologiques pour propulser votre message vers de nouveaux sommets.</p>
