add why section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
   {% include mission_section.html %}
   {% include valeurs_section.html %}
   {% include founder_section.html %}
+  {% include why_section.html %}
   {{ content }}
 </body>
 
