--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   {% include valeurs_section.html %}
   {% include founder_section.html %}
   {% include why_section.html %}
+  {% include references_section.html %}
   {{ content }}
 </body>
 
