contact section with calendly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   {% include founder_section.html %}
   {% include why_section.html %}
   {% include references_section.html %}
+  {% include contact_section.html %}
   {% include footer.html %}
   {{ content }}
 </body>
