anchors and links

--- a/_includes/founder_section.html
+++ b/_includes/founder_section.html
@@ -1,4 +1,4 @@
-<div>
+<div id="founder">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">fondatrice.</h2>
@@ -20,7 +20,7 @@
           </figure>
         </div>
         <div class="mt-10 flex items-center justify-center">
-          <a href="#" class="rounded-md background-green px-10 py-3 text-sm font-semibold text-semi-white shadow-sm hover:bg-green-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Contactez-moi</a>
+          <a href="#contact" class="rounded-md background-green px-10 py-3 text-sm font-semibold text-semi-white shadow-sm hover:bg-green-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Contactez-moi</a>
         </div>
       </section>
     </div>
