--- a/_includes/mission_section.html
+++ b/_includes/mission_section.html
@@ -1,4 +1,4 @@
-<div>
+<div id="mission">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
