--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,11 +15,11 @@
       </button>
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Missions</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Valeurs</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">À propos</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Références</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Contact</a>
+      <a href="#mission" class="text-sm font-semibold leading-6 text-gray-900">Missions</a>
+      <a href="#valeurs" class="text-sm font-semibold leading-6 text-gray-900">Valeurs</a>
+      <a href="#founder" class="text-sm font-semibold leading-6 text-gray-900">À propos</a>
+      <a href="#references" class="text-sm font-semibold leading-6 text-gray-900">Références</a>
+      <a href="#contact" class="text-sm font-semibold leading-6 text-gray-900">Contact</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
       <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="-m-1.5 p-1.5">
@@ -48,11 +48,11 @@
       <div class="mt-6 flow-root">
         <div class="-my-6 divide-y divide-gray-500/10">
           <div class="space-y-2 py-6">
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Missions</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Valeurs</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">À propos</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Références</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contact</a>
+            <a href="#mission" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Missions</a>
+            <a href="#valeurs" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Valeurs</a>
+            <a href="#founder" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">À propos</a>
+            <a href="#references" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Références</a>
+            <a href="#contact" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contact</a>
           </div>
         </div>
       </div>
