--- a/_includes/header_section.html
+++ b/_includes/header_section.html
@@ -10,8 +10,10 @@
     </div>
   </div>
   <div class="pb-10">
-    <svg class="h-10 w-10 mx-auto text-semi-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path>
-    </svg>
+    <a href="#mission">
+      <svg class="h-10 w-10 mx-auto text-semi-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path>
+      </svg>
+    </a>
   </div>
 </div>
