--- a/_includes/references_section.html
+++ b/_includes/references_section.html
@@ -1,4 +1,4 @@
-<div>
+<div id="references">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-60 lg:px-30 xl:p-30">
       <h2 class="text-3xl font-bold text-center">références.</h2>
     <div class="py-12 sm:py-12">
