--- a/_includes/valeurs_section.html
+++ b/_includes/valeurs_section.html
@@ -1,4 +1,4 @@
-<div class="background-green">
+<div id="valeurs" class="background-green">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold text-semi-white sm:text-3xl">valeurs.</h2>
