--- a/_includes/contact_section.html
+++ b/_includes/contact_section.html
@@ -2,7 +2,7 @@
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-10 pt-20 sm:pb-10 lg:px-30 xl:p-20">
     <div class="mx-auto max-w-2xl text-semi-white text-center">
       <h2 class="text-3xl font-bold sm:text-3xl">contactez-moi.</h2>
-      <p class="mt-6 text-base">Par <a class="email" href="mailto:tania@editagencyparis.com">email</a> ou en sélectionnant un moment pour discuter. </p>
+      <p class="p-6 text-base">Par <a class="email" href="mailto:tania@editagencyparis.com">email</a> ou en sélectionnant un moment pour discuter. </p>
     </div>
     <!-- Calendly inline widget begin -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/tania-rq4/30min" style="min-width:320px;height:700px;"></div>
