--- a/_includes/valeurs_section.html
+++ b/_includes/valeurs_section.html
@@ -3,8 +3,8 @@
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold text-semi-white sm:text-3xl">valeurs.</h2>
     </div>
-    <div class="mx-auto max-w-2xl lg:max-w-none">
-      <dl class="grid mt-6 max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
+    <div class="mx-auto max-w-2xl lg:max-w-none mt-6">
+      <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
             Environnement
