--- a/_includes/why_section.html
+++ b/_includes/why_section.html
@@ -2,9 +2,8 @@
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-semi-white text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">pourquoi.</h2>
-      <p class="mt-6 text-base">Nous sommes convaincus que la <b>technologie</b> est bien plus qu'un secteur, c'est une <b>force transformative</b>. Parce que la Tech impacte et bouleverse tous les secteurs, casse les codes établis et ouvre de nouveaux champs de possibilités.</p>
-      <p class="mt-2 text-base">Plus que jamais, les enjeux <b>sociétaux, environnementaux et technologiques</b> sont étroitement liés. C'est dans ce contexte que nous avons adopté la devise <b>'Tech care!'</b> chez <b>edit. agency</b>. Nous nous engageons à accompagner les acteurs de la Tech, ceux qui contribuent à réinventer le monde de demain, dans leurs <b>stratégies de communication</b>.</p>
-      <p class="mt-2 text-base">Rejoignez-nous dans cette aventure où la passion pour la Tech se marie harmonieusement avec notre engagement envers l'environnement. Ensemble, façonnons un monde où la Tech devient une force positive, inspirante et respectueuse. Parce que chez <b>edit. agency</b>, la Tech n'est pas seulement une affaire de communication, c'est une mission pour un avenir durable.</p>
+      <p class="mt-6 text-base">Nous sommes convaincus que la <b>technologie</b> est bien plus qu’un secteur : il s’agit avant tout d’une force transformatrice, qui nous pousse à ne jamais nous reposer sur nos acquis. Parce que la technologie bouleverse toutes les industries, casse les codes et ouvre de nouveaux champs de possibilités. Et parce qu’elle est au carrefour de tous nos enjeux actuels : <b>économiques, sociétaux et environnementaux</b>.</p>
+      <p class="mt-2 text-base">Nous nous engageons à accompagner toutes les <b>entreprises technologiques</b> qui souhaitent avoir un impact positif – quel qu’il soit – sur l’ensemble de notre société. Parce que chez <b>edit. agency</b>, nous croyons fermement que la technologie est la clé pour comprendre, décrypter et anticiper les défis et opportunités de demain.</p>
     </div>
   </div>
 </div>
