--- a/_includes/mission_section.html
+++ b/_includes/mission_section.html
@@ -2,8 +2,8 @@
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-30 sm:pt-30 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
-      <p class="mt-6 text-sm">Chez <b>edit. agency</b> notre mission est claire : donner vie à vos idées, construire des ponts entre votre entreprise et votre public cible, tout en restant fidèle à nos valeurs fondamentales : <b>l'environnement</b> et <b>la transparence</b>.</p>
-      <p class="mt-2 text-sm">Nous nous engageons à élaborer des <b>stratégies de communication novatrices</b>, respectueuses de la planète et intégrant les dernières avancées technologiques pour propulser votre message vers de nouveaux sommets.</p>
+      <p class="mt-6 text-sm">Chez <b>edit. agency</b>, nous avons une mission qui nous anime quotidiennement : élever votre voix - et ce, par n’importe quelle voie. Nous avons à cœur de développer des <b>stratégies de communication sur-mesure, adaptées à vos objectifs.</b></p>
+      <!-- <p class="mt-2 text-sm">Nous sommes convaincus que la communication doit avant tout accompagner les enjeux de <b>réputation et de croissance d’une entreprise</b>. Notre credo : sortir de sa zone de confort pour redoubler de créativité. Car nous ne sommes confortables que dans l’inconfortable.</p> -->
       <dl class="mx-auto mt-10 grid max-w-2xl grid-cols-3 gap-y-10 sm:gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-5">
         <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
           <dt class="text-xs font-semibold leading-4">Relations publiques</dt>
