--- a/_includes/references_section.html
+++ b/_includes/references_section.html
@@ -14,7 +14,7 @@
             <img class="max-h-10 w-full object-contain" src="/assets/images/logo_atos.png" alt="atos">
           </div>
           <div class="bg-gray-400/5 p-6 sm:p-10">
-            <img class="max-h-10 w-full object-contain" src="/assets/images/logo_criteo.png" alt="Criteo">
+            <img class="max-h-10 w-full object-contain" src="/assets/images/logo_bzhunt.png" alt="BzHunt">
           </div>
           <div class="bg-gray-400/5 p-6 sm:p-10">
             <img class="max-h-14 w-full object-contain" src="/assets/images/logo_edelman.png" alt="Edelman">
