--- a/_includes/valeurs_section.html
+++ b/_includes/valeurs_section.html
@@ -7,26 +7,26 @@
       <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
-            Environnement
+            Collaboration
           </dt>
           <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-semi-white">
-            <p class="flex-auto">edit. agency est fière d'être une agence de communication éco-responsable. De la réduction de notre empreinte carbone à la promotion de pratiques durables, nous intégrons activement des initiatives respectueuses de l'environnement dans toutes nos opérations.</p>
+            <p class="flex-auto">La force et l’impact de notre métier résident dans l’échange et la collaboration. Nos clients sont comme de véritables partenaires. Cette approche est au cœur de chacun de nos projets, car nous avançons en équipe vers un seul et même objectif : s’élever ensemble.</p>
           </dd>
         </div>
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
-            Collectif
+            Transparence
           </dt>
           <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-semi-white">
-            <p class="flex-auto">edit. agency est fière d'être une agence de communication éco-responsable. De la réduction de notre empreinte carbone à la promotion de pratiques durables, nous intégrons activement des initiatives respectueuses de l'environnement dans toutes nos opérations.</p>
+            <p class="flex-auto">La transparence est un pilier fondamental de notre philosophie. Nous nous engageons à être clairs et honnêtes à chaque étape de notre collaboration, en partageant nos idées, nos processus et nos résultats – sans langue de bois. C’est cette relation de confiance qui nous guide quotidiennement.</p>
           </dd>
         </div>
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
-            Audace
+            Excellence
           </dt>
           <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-semi-white">
-            <p class="flex-auto">edit. agency est fière d'être une agence de communication éco-responsable. De la réduction de notre empreinte carbone à la promotion de pratiques durables, nous intégrons activement des initiatives respectueuses de l'environnement dans toutes nos opérations.</p>
+            <p class="flex-auto">L’excellence est notre moteur quotidien. Chez edit. agency, nous repoussons sans cesse nos limites pour offrir des solutions de la plus haute qualité. Notre exigence pour le détail est le reflet de notre engagement à répondre et à dépasser vos attentes.</p>
           </dd>
         </div>
       </dl>
