fix some errors, add favicon and change website title

--- a/_includes/mission_section.html
+++ b/_includes/mission_section.html
@@ -4,21 +4,21 @@
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
       <p class="mt-6 text-sm">Chez <b>edit. agency</b>, nous avons une mission qui nous anime quotidiennement : élever votre voix - et ce, par n’importe quelle voie. Nous avons à cœur de développer des <b>stratégies de communication sur-mesure, adaptées à vos objectifs.</b></p>
       <!-- <p class="mt-2 text-sm">Nous sommes convaincus que la communication doit avant tout accompagner les enjeux de <b>réputation et de croissance d’une entreprise</b>. Notre credo : sortir de sa zone de confort pour redoubler de créativité. Car nous ne sommes confortables que dans l’inconfortable.</p> -->
-      <dl class="mx-auto mt-10 grid max-w-2xl grid-cols-3 gap-y-10 sm:gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-5">
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Relations publiques</dt>
+      <dl class="mx-auto mt-10 grid max-w-2xl gap-y-10 sm:gap-y-16 lg:mx-0 lg:max-w-none grid-cols-2 sm:grid-cols-3 lg:grid-cols-5">
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Relations publiques</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Social Media</dt>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Social Media</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Brand Content</dt>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Brand Content</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Accompagnement de dirigeants</dt>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Accompagnement de dirigeants</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-r border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Prête-plume</dt>
+        <div class="flex flex-col gap-y-3 border-l border-r border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Prête-plume</dt>
         </div>
       </dl>
     </div>
