--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>{{ page.title }} - {{ site.title }}</title>
+  <title>{{ page.title }} - Agence de communication à Paris</title>
+  <link rel="icon" type="image/png" href="/assets/images/logo_edit_favicon_64x64.png">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 </head>
 
