--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,9 @@
       <p class="text-center text-xs leading-5 text-gray-500">Ce site internet est un site basse consommation.</p>
       <p class="text-center text-xs leading-5 text-gray-500">&copy; 2024 edit. agency. Tous droits réservés.</p>
     </div>
-    <div class="flex justify-center space-x-6 order-3 md:order-3">
-      <span class="sr-only">Linkedin</span>
-      <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="-m-1.5 p-1.5">
+    <div class="flex items-center justify-center space-x-6 order-3 md:order-3">
+      <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="p-2">
+        <span class="sr-only">Linkedin</span>
         <img class="h-7 w-auto" src="/assets/images/logo-linkedin.png" alt="linkedin logo">
       </a>
     </div>
